plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

subprojects {
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    gradle.projectsEvaluated {
        tasks.withType(JavaCompile).tap {
            configureEach {
                options.compilerArgs << "-Werror"
            }
        }
    }

    dependencies {
        implementation          libs.annotation.api
        implementation          libs.apache.commons
        implementation          libs.log4j.api
        implementation          libs.log4j.core
        runtimeOnly             libs.log4j.slf4j.impl
        compileOnly             libs.lombok
        testCompileOnly         libs.lombok
        annotationProcessor     libs.lombok
        testAnnotationProcessor libs.lombok
        testImplementation      libs.mockito.core
        testImplementation      libs.testng

    }

    tasks.withType(Test).configureEach {
        useTestNG()
    }

}